@@ -38,6 +38,7 @@ class TiEmuDCOP: public QObject, virtual public DCOPObject
     int emulated_calc_type();
     int emulated_hw_version();
     QString emulated_os_version();
+    bool ready_for_transfers();
     void send_file(QString);
     void send_files(QStringList);
     void debug_file(QString);
